RESOLVED FIXED20860
REGRESSION: Crash in RenderLayer::hasVisibleContent() loading wavy.com
https://bugs.webkit.org/show_bug.cgi?id=20860
Summary REGRESSION: Crash in RenderLayer::hasVisibleContent() loading wavy.com
s
Reported 2008-09-15 14:26:44 PDT
when trying to go to the following local news link on my earthlink start page, http://www.wavy.com/Global/story.asp?S=9010429&nav=menu45_2_5, webkit crashes. It will do it every time.
Attachments
Check the correct object for having layout before asking a layout-y question (1.34 KB, patch)
2008-09-15 23:23 PDT, mitz
hyatt: review+
Matt Lilek
Comment 1 2008-09-15 17:18:34 PDT
Confirmed with r36447: Thread 0 Crashed: 0 com.apple.WebCore 0x036dbb7d WebCore::RenderLayer::hasVisibleContent() const + 9 (RenderLayer.h:272) 1 com.apple.WebCore 0x036e5c23 WebCore::RenderBox::absoluteClippedOverflowRect() + 49 (RenderBox.cpp:1079) 2 com.apple.WebKit 0x001c8c1e -[WebFrame(WebInternal) _getVisibleRect:] + 180 (WebFrame.mm:617) 3 com.apple.WebKit 0x001dc9b8 -[WebFrameView visibleRect] + 178 (WebFrameView.mm:509) 4 com.apple.AppKit 0x92442681 -[NSView(NSInternal) _setWindowNeedsDisplayInViewsDrawableRect] + 93 5 com.apple.AppKit 0x9244b475 -[NSView _removeSubview:] + 278 6 com.apple.AppKit 0x9244110d -[NSView _setSuperview:] + 667 7 com.apple.AppKit 0x9244acc2 -[NSView removeFromSuperview] + 338 8 com.apple.WebCore 0x03899909 WebCore::safeRemoveFromSuperview(NSView*) + 295 (WidgetMac.mm:77) 9 com.apple.WebCore 0x0389b4dd WebCore::Widget::removeFromSuperview() + 225 (WidgetMac.mm:325) 10 com.apple.WebCore 0x03851c75 WebCore::ScrollView::removeChild(WebCore::Widget*) + 17 (ScrollViewMac.mm:227)
mitz
Comment 2 2008-09-15 23:23:19 PDT
Created attachment 23462 [details] Check the correct object for having layout before asking a layout-y question
Dave Hyatt
Comment 3 2008-09-15 23:38:11 PDT
Comment on attachment 23462 [details] Check the correct object for having layout before asking a layout-y question r=me
mitz
Comment 4 2008-09-15 23:39:59 PDT
Note You need to log in before you can comment on or make changes to this bug.