        Reviewed by Dave Hyatt.

- fix https://bugs.webkit.org/show_bug.cgi?id=20860
          REGRESSION: Crash in RenderLayer::hasVisibleContent() loading wavy.com

        * WebView/WebFrame.mm:
        (-[WebFrame _getVisibleRect:]): Changed to check if the RenderPart has
        layout before accessing it, instead of checking if the frame inside it
        has layout.



Canonical link: https://commits.webkit.org/28775@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@36486 268f45cc-cd09-0410-ab3c-d52691b4dbfc